2019-12-13  Alexey Shvayka  <shvaikalesh@gmail.com>

        Unreviewed. Add myself as a committer.

        * Scripts/webkitpy/common/config/contributors.json:

2019-12-13  Alex Christensen  <achristensen@webkit.org>

        Allow cross-origin requests to WKURLSchemeHandlers
        https://bugs.webkit.org/show_bug.cgi?id=205198
        <rdar://problem/57897836>

        Reviewed by Brady Eidson.

        * TestWebKitAPI/Tests/WebKitCocoa/WKURLSchemeHandler-1.mm:
        Verify that a cross origin request is received by the WKURLSchemeHandler.  It was not before.
        Verify that loading will fail unless there are CORS headers in the response.

2019-12-13  Devin Rousso  <drousso@apple.com>

        Teach prepare-ChangeLog about JavaScript async functions
        https://bugs.webkit.org/show_bug.cgi?id=205195

        Reviewed by Jonathan Bedard.

        * Scripts/prepare-ChangeLog:
        (get_function_line_ranges_for_javascript):

        * Scripts/webkitperl/prepare-ChangeLog_unittest/resources/javascript_unittests.js:
        (AsyncFuncClass): Added.
        (AsyncFuncClass.async staticAsync): Added.
        (AsyncFuncClass.prototype.async methodAsync): Added.
        (AsyncFuncClass.prototype.async get getAsync): Added.
        (AsyncFuncClass.prototype.async set setAsync): Added.
        (async asyncFunc1): Added.
        * Scripts/webkitperl/prepare-ChangeLog_unittest/resources/javascript_unittests-expected.txt:

2019-12-13  John Wilander  <wilander@apple.com>

        IsLoggedIn: Abstract data type for IsLoggedIn state
        https://bugs.webkit.org/show_bug.cgi?id=205041
        <rdar://problem/56723904>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebCore/LoggedInStatus.cpp: Added.
        (TestWebKitAPI::TEST):

2019-12-13  Wenson Hsieh  <wenson_hsieh@apple.com>

        [Clipboard API] Sanitize HTML and image data written using clipboard.write