@@ -324,6 +324,9 @@ def parse_args(args):
         optparse.make_option(
             "--webgl-test-suite", action="store_true", default=False,
             help=("Run exhaustive webgl list, including test ordinarily skipped for performance reasons. Equivalent to '--additional-expectations=LayoutTests/webgl/TestExpectations webgl'")),
+        optparse.make_option(
+            "--use-gpu-process", action="store_true", default=False,
+            help=("Enable all GPU process related features, also set additional expectations and the result report flavor.")),
     ]))
 
     option_group_definitions.append(("Web Platform Test Server Options", [
@@ -365,6 +368,19 @@ def parse_args(args):
         host = Host()
         host.initialize_scm()
         options.additional_expectations.insert(0, host.filesystem.join(host.scm().checkout_root, 'LayoutTests/webgl/TestExpectations'))
+
+    if options.use_gpu_process:
+        host = Host()
+        host.initialize_scm()
+        options.additional_expectations.insert(0, host.filesystem.join(host.scm().checkout_root, 'LayoutTests/gpu-process/TestExpectations'))
+        if not options.internal_feature:
+            options.internal_feature = []
+        options.internal_feature.append('UseGPUProcessForMedia')
+        options.internal_feature.append('CaptureAudioInGPUProcessEnabled')
+        if options.result_report_flavor:
+            raise RuntimeError('--use-gpu-process implicitly sets the result flavor, this should not be overridden')
+        options.result_report_flavor = 'gpuprocess'
+
     return options, args
 
 
