@@ -1,3 +1,15 @@
+2019-12-13  Peng Liu  <peng.liu6@apple.com>
+
+        Add an option to run_webkit_tests.py to enable all GPU process related features and choose the additional expectations
+        https://bugs.webkit.org/show_bug.cgi?id=205214
+
+        The option also specifies the result-report-flavor.
+
+        Reviewed by Tim Horton.
+
+        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
+        (parse_args):
+
 2019-12-13  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Unreviewed. Add myself as a committer.
